--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
 <html>
+
+<head>
+    <title> Covert DayZ </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+    
+<body onload="document.body.style.opacity='1'">
+
+    <div class="item">
+        <img class="logo" src="name.png">
+        <span class="logoText">Welcome To Paradise.</span>
+    </div>
+
+</body>
+
 </html>
