--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title> Covert DayZ </title>
+    <title> Covert Lab DayZ </title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
     
