--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <html>
 
 <head>
-    <title> Covert Lab DayZ </title>
+    <title> Covert Lab</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-    
+
 <body onload="document.body.style.opacity='1'">
 
-    <div class="item">
-        <img class="logo" src="name.png">
-        <span class="logoText">Welcome To Paradise.</span>
-    </div>
+        <img class="logo" src="MainHeader.png">
 
+        <div class="nav">
+            <a href="http://www.Covert-Lab.com/index.html/" class="MenuText">HOME</a>
+            <a class="MenuText">FORUM</a>
+            <a class="MenuText">LEADERBOARD</a>
+            <a class="MenuText">DISCORD</a>
+        </div>
+
+        <div class="headimages">
+            <img class="himage-left" src="head-left.png">
+            <img class="himage-center" src="head-left.png">
+            <img class="himage-right" src="head-left.png">
+        </div>
 </body>
 
 </html>
